More documentation changes

--- a/README.pod
+++ b/README.pod
@@ -43,6 +43,6 @@ This module requires these other modules and libraries:
 rgit is free software. It comes without any warranty, to the extent permitted
 by applicable law. 
 
-rgit is released under the I<WTFPL Version 2.0> L<http://sam.zoy.org/wtfpl/COPYING>
+rgit is released under the I<WTFPL Version 2.0> licence - L<http://sam.zoy.org/wtfpl/COPYING>
 
 =cut
