--- a/README.pod
+++ b/README.pod
@@ -18,9 +18,9 @@ I<GIT_WORK_TREE> and I<GIT_DIR> environmental variables from any file paths.
 
 =head2 VERSION
 
-version 0.02
+Version 0.04
 
-    Now with some POD.
+    Now filters out obvious flags and comments from directory tests.
 
 =head2 INSTALLATION
 
